logs/pyblish.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyblish'...
Listing './lib/python3.5/site-packages/pyblish/icons'...
Listing './lib/python3.5/site-packages/pyblish/plugins'...
Listing './lib/python3.5/site-packages/pyblish/vendor'...
Listing './lib/python3.5/site-packages/pyblish/vendor/click'...
Listing './lib/python3.5/site-packages/pyblish-1.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pyblish_base-1.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pyblish_lite'...
Listing './lib/python3.5/site-packages/pyblish_lite/font'...
Listing './lib/python3.5/site-packages/pyblish_lite/font/fontawesome'...
Listing './lib/python3.5/site-packages/pyblish_lite/font/opensans'...
Listing './lib/python3.5/site-packages/pyblish_lite/img'...
Listing './lib/python3.5/site-packages/pyblish_lite/vendor'...
Listing './lib/python3.5/site-packages/pyblish_lite-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/pyblish_maya'...
Compiling './lib/python3.5/site-packages/pyblish_maya/lib.py'...
***   File "./lib/python3.5/site-packages/pyblish_maya/lib.py", line 335
    print "Deleting existing dock..."
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyblish_maya/plugins'...
Listing './lib/python3.5/site-packages/pyblish_maya/pythonpath'...
Listing './lib/python3.5/site-packages/pyblish_maya/vendor'...
Listing './lib/python3.5/site-packages/pyblish_maya-2.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pyblish_modo'...
Listing './lib/python3.5/site-packages/pyblish_modo/nexus_user'...
Listing './lib/python3.5/site-packages/pyblish_modo/nexus_user/Scripts'...
Listing './lib/python3.5/site-packages/pyblish_modo/nexus_user/Scripts/PyblishModo'...
Listing './lib/python3.5/site-packages/pyblish_modo/nexus_user/Scripts/PyblishModo/pyscripts'...
Listing './lib/python3.5/site-packages/pyblish_modo/plugins'...
Listing './lib/python3.5/site-packages/pyblish_modo-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pyblish_qml'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Perspective'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Perspective/tests'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Pyblish'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Pyblish/Graphs'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Pyblish/ListItems'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Pyblish/fonts'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Pyblish/fonts/fontawesome'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Pyblish/fonts/opensans'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Pyblish/icons'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/Pyblish/tests'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/delegates'...
Listing './lib/python3.5/site-packages/pyblish_qml/qml/tests'...
Listing './lib/python3.5/site-packages/pyblish_qml/rpc'...
Listing './lib/python3.5/site-packages/pyblish_qml/rpc/schema'...
Listing './lib/python3.5/site-packages/pyblish_qml/vendor'...
Listing './lib/python3.5/site-packages/pyblish_qml/vendor/jsonschema'...
Listing './lib/python3.5/site-packages/pyblish_qml/vendor/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/pyblish_qml/vendor/jsonschema/tests'...
Listing './lib/python3.5/site-packages/pyblish_qml-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/__init__.py'...
Compiling './lib/python3.5/site-packages/tests/lib.py'...
Listing './lib/python3.5/site-packages/tests/pre11'...
Listing './lib/python3.5/site-packages/tests/pre13'...
Compiling './lib/python3.5/site-packages/tests/test_control.py'...
Compiling './lib/python3.5/site-packages/tests/test_util.py'...
Listing './share'...
Listing './share/python-wheels'...
